# nutrition-tracking-api

./: .env.local  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2026_02_19_add_user_model.py  2026_02_20_auth_roles_policies.py  2026_02_20_capacity_9100_auth_roles_policies.py  2026_02_24_add_history_table.py  2026_02_27_add_creator_and_modifier.py  2026_03_23_add_password_hash_and_nullable_access_.py  2026_03_23_add_unique_constraint_to_user_username.py  2026_03_29_add_food_item_model.py  2026_03_29_add_meal_entry_and_meal_food_item_models.py  2026_03_29_remove_master_id_and_ad_login_from_user.py  2026_04_01_add_nutrition_goal_model.py  2026_04_01_add_weight_log_model.py  2026_04_02_add_user_profile_fields.py  2026_04_05_remove_service_user_fields.py
docker/: Dockerfile
github/workflows/: deploy.yml
nutrition_tracking_api/: app_schemas.py  dependencies.py  logger.py  settings.py
nutrition_tracking_api/api/: exceptions.py  main.py
nutrition_tracking_api/api/crud/: __init__.py  base.py
nutrition_tracking_api/api/crud/auth/: __init__.py  policy.py  role.py  token.py  user.py
nutrition_tracking_api/api/crud/core/: history.py
nutrition_tracking_api/api/crud/nutrition/: food_item.py  meal_entry.py  meal_food_item.py  nutrition_goal.py  weight_log.py
nutrition_tracking_api/api/dependencies/: auth.py
nutrition_tracking_api/api/metrics/: metrics.py  utils.py
nutrition_tracking_api/api/middlewares/: __init__.py  logging.py  request_id.py
nutrition_tracking_api/api/schemas/: __init__.py  filters.py  pagination.py
nutrition_tracking_api/api/services/: __init__.py  base.py  history.py
nutrition_tracking_api/api/utils/: auth.py  routes.py  utils.py
nutrition_tracking_api/integrations/: openrouter.py  twork.py
nutrition_tracking_api/orm/: database.py
nutrition_tracking_api/orm/choices/: __init__.py  history.py
nutrition_tracking_api/orm/models/: __init__.py  auth.py  base.py  core.py  nutrition.py  token.py  utils.py
tests/: conftest.py  test_migrations.py
tests/api/routes/: test_auth.py  test_root.py
tests/factories/: __init__.py  base.py
tests/factories/auth/: __init__.py  policy.py  role.py  user.py
tests/factories/nutrition/: __init__.py  food_item.py  meal_entry.py  meal_food_item.py  nutrition_goal.py  weight_log.py
(+65 files in other folders)
